- fix scroll visible when is a smaller window - add color and different icon for each card

--- a/src/app/Components/card/card.component.scss
+++ b/src/app/Components/card/card.component.scss
@@ -5,6 +5,14 @@
     font-family: "Ledger", serif;
 }
 
+:host.red .heart.firstHeart{
+    color: red;
+}
+
+:host.red .heart.lastHeart {
+    color: red;
+}
+
 .heart {
     position: absolute;
     font-size: 24px;
