--- a/src/app/Components/results/results.component.scss
+++ b/src/app/Components/results/results.component.scss
@@ -8,5 +8,5 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    margin: 2rem;
+    margin: 2rem 0 2rem 0;
 }
